--- a/CMPUT301F22T21_Project/app/src/main/res/layout/activity_main.xml
+++ b/CMPUT301F22T21_Project/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:itemIconTint="@null"
         android:id="@+id/bnv"
         app:itemTextColor="@drawable/selector_bottom"
         app:labelVisibilityMode="labeled"
