--- a/CMPUT301F22T21_Project/app/src/main/res/layout/fragment_plan.xml
+++ b/CMPUT301F22T21_Project/app/src/main/res/layout/fragment_plan.xml
@@ -22,4 +22,13 @@
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="100dp"
+        app:srcCompat="@drawable/ic_baseline_add_24" />
 </RelativeLayout>
