--- a/CMPUT301F22T21_Project/app/src/main/res/layout/activity_add_recipe.xml
+++ b/CMPUT301F22T21_Project/app/src/main/res/layout/activity_add_recipe.xml
@@ -27,36 +27,91 @@
                 android:layout_marginBottom="10dp"
                 android:src="@drawable/ic_baseline_image_24" />
 
-            <EditText
-                android:id="@+id/et_title"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Title" />
+                android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/et_preparation_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Preparation Time" />
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:text="Title:"
+                    android:textColor="@color/black" />
 
-            <EditText
-                android:id="@+id/et_number"
-                android:layout_width="match_parent"
-                android:inputType="number"
-                android:layout_height="wrap_content"
-                android:hint="Number Of Servings" />
+                <EditText
+                    android:id="@+id/et_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Title" />
+            </LinearLayout>
 
-            <EditText
-                android:id="@+id/et_category"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Recipe Category" />
+                android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/et_comments"
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:text="Time:"
+                    android:textColor="@color/black" />
+
+                <EditText
+                    android:id="@+id/et_preparation_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Preparation Time" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Comments" />
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:text="Number:"
+                    android:textColor="@color/black" />
+
+                <EditText
+                    android:id="@+id/et_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Number Of Servings"
+                    android:inputType="number" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:text="Category:"
+                    android:textColor="@color/black" />
+
+                <EditText
+                    android:id="@+id/et_category"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Recipe Category" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:text="Comments:"
+                    android:textColor="@color/black" />
+
+                <EditText
+                    android:id="@+id/et_comments"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Comments" />
+            </LinearLayout>
 
             <Button
                 android:id="@+id/btn_add_ingredient"
