--- a/CMPUT301F22T21_Project/app/src/main/res/menu/menu_ingredient.xml
+++ b/CMPUT301F22T21_Project/app/src/main/res/menu/menu_ingredient.xml
@@ -2,9 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_add_ingredient"
-        android:icon="@drawable/ic_baseline_add_24"
-        android:title="add"
-        app:showAsAction="always" />
-
+        android:id="@+id/menu_sort_ingredient"
+        android:title="SORT" />
 </menu>
