--- a/CMPUT301F22T21_Project/app/src/main/res/layout/activity_add_ingredient.xml
+++ b/CMPUT301F22T21_Project/app/src/main/res/layout/activity_add_ingredient.xml
@@ -59,7 +59,7 @@
             <TextView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="Unit:"
+                android:text="Unit cost:"
                 android:textColor="@color/black" />
 
             <Spinner
