--- a/CMPUT301F22T21_Project/app/src/main/res/layout/fragment_plan.xml
+++ b/CMPUT301F22T21_Project/app/src/main/res/layout/fragment_plan.xml
@@ -61,4 +61,34 @@
         android:layout_marginRight="50dp"
         android:layout_marginBottom="100dp"
         app:srcCompat="@drawable/ic_baseline_add_24" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textView111"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="280dp"
+            android:text="Scale factor: " />
+
+        <EditText
+            android:id="@+id/edit_scale_factor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="numberDecimal"
+            android:textAlignment="center"
+            android:autofillHints="1"
+            android:text="1" />
+
+
+    </LinearLayout>
 </RelativeLayout>
